--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@repo/config-contract": "*",
+    "@pinata/sdk": "^2.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "compression": "^1.7.4",
