feat: Update OpenAI model to gpt-4o-mini for image analysis
refactor: Simplify medical document verification prompt and response handling

fix: Improve campaign ID extraction from event topics in contract service

chore: Clean up unused imports and improve Thor client configuration

chore: Enhance environment variable validation with defaults for new keys

feat: Integrate API endpoints into frontend components for better maintainability

fix: Update donation logic in CampaignDetails to handle transaction receipts

feat: Refactor CreateCampaign component to use API endpoints for document verification and campaign creation

feat: Add CreatorDashboard API integration for fetching creator profiles

chore: Introduce centralized API configuration for easier endpoint management

refactor: Update contract ABI to reflect new campaign and donation functionalities

build: Add deployment tasks for vecare on solo and testnet environments

--- a/apps/backend/.env.production.local.example
+++ b/apps/backend/.env.production.local.example
@@ -6,25 +6,29 @@ LOG_FORMAT = prod
 LOG_DIR = ../logs
 
 # CORS
-ORIGIN = <ORIGIN>
+ORIGIN = <YOUR_FRONTEND_URL>
 CREDENTIALS = true
 
-# OpenAI
-OPENAI_API_KEY = <OPENAI_API_KEY>
+# OpenAI API Key (Required for AI verification)
+# Get your key at: https://platform.openai.com/api-keys
+OPENAI_API_KEY = <YOUR_OPENAI_API_KEY>
+
+# Pinata IPFS Configuration (Required for document storage)
+# Get your keys at: https://app.pinata.cloud/
+PINATA_API_KEY = <YOUR_PINATA_API_KEY>
+PINATA_API_SECRET = <YOUR_PINATA_API_SECRET>
+PINATA_GATEWAY = https://gateway.pinata.cloud
 
 # I/O
-MAX_FILE_SIZE = 10mb
+MAX_FILE_SIZE = 50mb
 
-# WALLET
-ADMIN_MNEMONIC = <ADMIN_MNEMONIC>
-ADMIN_ADDRESS = <ADMIN_ADDRESS>
+# WALLET (Production - use your own secure private key)
+ADMIN_PRIVATE_KEY = <YOUR_ADMIN_PRIVATE_KEY>
+ADMIN_ADDRESS = <YOUR_ADMIN_ADDRESS>
 
-# NETWORK
+# NETWORK (Testnet or Mainnet)
 NETWORK_URL = https://testnet.vechain.org
 NETWORK_TYPE = testnet # testnet, mainnet
 
-# CAPTCHA
-RECAPTCHA_SECRET_KEY = <RECAPTCHA_SECRET_KEY>
-
 # Rewards
-REWARD_AMOUNT = <REWARD_AMOUNT>
+REWARD_AMOUNT = 1
