--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@repo/utils": "*",
+    "@tailwindcss/vite": "^4.1.14",
     "@vechain/dapp-kit-react": "^1.0.12",
     "framer-motion": "^11.2.6",
     "react": "^18.2.0",
@@ -33,11 +34,14 @@
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.21",
     "device-uuid": "^1.0.4",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "postcss": "^8.5.6",
     "react-icons": "^5.2.1",
+    "tailwindcss": "^4.1.14",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vite-plugin-node-polyfills": "^0.22.0"
