--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "x-app-template",
   "private": true,
   "scripts": {
+    "build:backend": "npm --prefix ./apps/backend run build",
+    "start:backend": "npm --prefix ./apps/backend run start",
+    "dev:backend": "npm --prefix ./apps/backend run dev",
     "build": "turbo build",
     "dev": "turbo dev",
     "lint": "turbo lint",
